--- a/pages/store.html
+++ b/pages/store.html
@@ -10,40 +10,40 @@
       <h3>Ultraviewer</h3>
       <p> </p>
       <div class="row">
-        \1<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3v12m0 0l-4-4m4 4l4-4M5 21h14"/></svg>Tải về\2
-        \1<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M14 3h7v7M21 3l-9 9"/><path d="M10 7H6a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3v-4"/></svg>Mở web\2
+        <a class="btn" href="https://www.ultraviewer.net/vi/download.html" target="_blank" rel="noopener">Tải về</a>
+        <a class="btn secondary" href="https://www.ultraviewer.net/vi/" target="_blank" rel="noopener">Mở web</a>
       </div>
     </article>
     <article class="card" data-tags="speedtest network đo tốc độ băng thông">
       <h3>Speedtest by Ookla</h3>
       <p> </p>
       <div class="row">
-        \1<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3v12m0 0l-4-4m4 4l4-4M5 21h14"/></svg>Tải về\2
-        \1<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M14 3h7v7M21 3l-9 9"/><path d="M10 7H6a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3v-4"/></svg>Mở web\2
+        <a class="btn" href="https://www.speedtest.net/apps" target="_blank" rel="noopener">Tải về</a>
+        <a class="btn secondary" href="https://www.speedtest.net/" target="_blank" rel="noopener">Mở web</a>
       </div>
     </article>
     <article class="card" data-tags="remote anydesk hỗ trợ từ xa">
       <h3>AnyDesk</h3>
       <p> </p>
       <div class="row">
-        \1<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3v12m0 0l-4-4m4 4l4-4M5 21h14"/></svg>Tải về\2
-		\1<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M14 3h7v7M21 3l-9 9"/><path d="M10 7H6a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3v-4"/></svg>Mở web\2
+        <a class="btn" href="https://anydesk.com/en/downloads/windows" target="_blank" rel="noopener">Tải về</a>
+		<a class="btn secondary" href="https://anydesk.com/en" target="_blank" rel="noopener">Mở web</a>
       </div>
     </article>
     <article class="card" data-tags="teamviewer remote hỗ trợ từ xa">
       <h3>TeamViewer</h3>
       <p> </p>
       <div class="row">
-        \1<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3v12m0 0l-4-4m4 4l4-4M5 21h14"/></svg>Tải về\2
-        \1<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M14 3h7v7M21 3l-9 9"/><path d="M10 7H6a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3v-4"/></svg>Mở web\2
+        <a class="btn" href="https://www.teamviewer.com/vi/download/windows/" target="_blank" rel="noopener">Tải về</a>
+        <a class="btn secondary" href="https://www.teamviewer.com/vi/" target="_blank" rel="noopener">Mở web</a>
       </div>
     </article>
 	<article class="card" data-tags="vpn wireguard network bảo mật">
       <h3>WireGuard</h3>
       <p> </p>
       <div class="row">
-        \1<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3v12m0 0l-4-4m4 4l4-4M5 21h14"/></svg>Tải về\2
-		\1<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M14 3h7v7M21 3l-9 9"/><path d="M10 7H6a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3v-4"/></svg>Mở web\2
+        <a class="btn" href="https://www.wireguard.com/install/" target="_blank" rel="noopener">Tải về</a>
+		<a class="btn secondary" href="https://www.wireguard.com/" target="_blank" rel="noopener">Mở web</a>
       </div>
     </article>
     <article class="card" data-tags="terminal android termux ssh">
