--- a/pages/about.html
+++ b/pages/about.html
@@ -1,2 +1,2 @@
 <link rel="stylesheet" href="../assets/style.css">
-<div style="padding:18px"><h3>About</h3><p class="mini">Labs Dashboard — bản IIS, cấu trúc thư mục gọn gàng.</p></div>
+<div style="padding:18px"><h3>About</h3><p class="mini">Labs , Design By VINHCB.</p></div>
