--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         </div>
       </div>
       <div class="toolbar">
-        <nav class="tabs" aria-label="Tabs">
-          <a class="tab" href="#home" data-tab="home" aria-selected="true">Home</a>
-          <a class="tab" href="#store" data-tab="store">Store</a>
-          <a class="tab" href="#network" data-tab="network">Network</a>
-          <a class="tab" href="#system" data-tab="system">System</a>
-          <a class="tab" href="#about" data-tab="about">About</a>
+        <nav class="tabs" aria-label="Tabs" role="tablist">
+          <a class="tab" role="tab" aria-controls="panelFrame" href="#home" data-tab="home" aria-selected="true">Home</a>
+          <a class="tab" role="tab" aria-controls="panelFrame" href="#store" data-tab="store">Store</a>
+          <a class="tab" role="tab" aria-controls="panelFrame" href="#network" data-tab="network">Network</a>
+          <a class="tab" role="tab" aria-controls="panelFrame" href="#system" data-tab="system">System</a>
+          <a class="tab" role="tab" aria-controls="panelFrame" href="#about" data-tab="about">About</a>
         </nav>
         <button id="themeToggle" class="theme-toggle" title="Toggle theme">🌗</button>
       </div>
