--- a/pages/home.html
+++ b/pages/home.html
@@ -3,6 +3,28 @@
   <h2 style="margin-top:0">Chào mừng bạn đến với địa chỉ này !</h2>
   <p class="mini">Mời bạn chọn một tab ở trên để sử dụng công cụ. Bắt đầu nhanh:</p>
   <div class="grid" style="margin-top:10px">
-    
+
+    <article class="card">
+      <h3>Bắt đầu với Network</h3>
+      <p class="mini">Xem địa chỉ IP Public của bạn và kiểm tra nhanh mạng.</p>
+      <div class="row">
+        <a class="btn" href="#network" onclick="parent.location.hash='#network'">Mở Network</a>
+      </div>
+    </article>
+    <article class="card">
+      <h3>Mở Store</h3>
+      <p class="mini">Tải các công cụ quen thuộc: Ultraviewer, Speedtest, WireGuard…</p>
+      <div class="row">
+        <a class="btn" href="#store" onclick="parent.location.hash='#store'">Mở Store</a>
+      </div>
+    </article>
+    <article class="card">
+      <h3>System</h3>
+      <p class="mini">Xem them.</p>
+      <div class="row">
+        <a class="btn" href="#system" onclick="parent.location.hash='#system'">Mở System</a>
+      </div>
+    </article>
+
   </div>
 </div>
