--- a/pages/network.html
+++ b/pages/network.html
@@ -11,8 +11,15 @@
 <script>
 const ipv4re = /^(?:\d{1,3}\.){3}\d{1,3}$/;
 const ipv6re = /^[0-9a-f:]+$/i;
-async function fetchJSON(u){ const r = await fetch(u, { cache: 'no-store' }); return await r.json(); }
-async function fetchTEXT(u){ const r = await fetch(u, { cache: 'no-store' }); return await r.text(); }
+function fetchWithTimeout(u, ms=1500, parse='text'){
+  const controller = new AbortController();
+  const timer = setTimeout(()=>controller.abort(), ms);
+  return fetch(u, { cache: 'no-store', signal: controller.signal })
+    .then(r=>{ if(!r.ok) throw new Error('HTTP '+r.status); return parse==='json' ? r.json() : r.text(); })
+    .finally(()=> clearTimeout(timer));
+}
+async function fetchJSON(u){ return await fetchWithTimeout(u, 1500, 'json'); }
+async function fetchTEXT(u){ return await fetchWithTimeout(u, 1500, 'text'); }
 async function tryAll(tasks){ for (const t of tasks){ try{ const v = await t(); if (v) return v; }catch{} } return ''; }
 async function getIPv4(){ return await tryAll([
   async()=>{ const j = await fetchJSON('https://api.ipify.org?format=json'); return ipv4re.test(j.ip)? j.ip : ''; },
