--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Labs</title>
   <link rel="stylesheet" href="assets/style.css">
+  <!-- AdSense (thêm client khi deploy domain) -->
+  <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX" crossorigin="anonymous"></script> -->
 </head>
 <body>
   <div class="container">
@@ -23,6 +25,7 @@
         <nav class="tabs" aria-label="Tabs" role="tablist">
           <a class="tab" role="tab" aria-controls="panelFrame" href="#home" data-tab="home" aria-selected="true">Home</a>
           <a class="tab" role="tab" aria-controls="panelFrame" href="#store" data-tab="store">Store</a>
+          <a class="tab" role="tab" aria-controls="panelFrame" href="#vstoc" data-tab="vstoc">VSTOC</a>
           <a class="tab" role="tab" aria-controls="panelFrame" href="#network" data-tab="network">Network</a>
           <a class="tab" role="tab" aria-controls="panelFrame" href="#system" data-tab="system">System</a>
           <a class="tab" role="tab" aria-controls="panelFrame" href="#about" data-tab="about">About</a>
@@ -39,7 +42,7 @@
     </main>
 
     <footer>
-      <div>© <span id="year"></span> Design By VINHCB.</div>
+      <div>© <span id="year"></span> Design By VINHCB. · <a href="#privacy" data-tab="privacy" class="footer-link">Privacy</a> · <a href="#terms" data-tab="terms" class="footer-link">Terms</a> · <a href="#contact" data-tab="contact" class="footer-link">Contact</a></div>
     </footer>
   </div>
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
