--- a/pages/home.html
+++ b/pages/home.html
@@ -19,10 +19,10 @@
       </div>
     </article>
     <article class="card">
-      <h3>System</h3>
-      <p class="mini">Xem them.</p>
+      <h3>Đổi nền Sáng/Tối</h3>
+      <p class="mini">Chuyển nhanh giữa theme tối và sáng.</p>
       <div class="row">
-        <a class="btn" href="#system" onclick="parent.location.hash='#system'">Mở System</a>
+        <button class="btn" onclick="parent.document.getElementById('themeToggle')?.click()">Đổi theme</button>
       </div>
     </article>
 
