--- a/pages/network.html
+++ b/pages/network.html
@@ -22,7 +22,7 @@
   <script>
     // Map lựa chọn → URL trang cần mở. Hãy đổi các URL này theo dự án của bạn.
     const ROUTES = {
-      "NET-HCM": "pages/netnet-hcm.html",
+      "NET-HCM": "pages/net/net-hcm.html",
       "NET-HN" : "net-hn.html",
       "NET-NT" : "net-nt.html"
     };
