--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
         </div>
       </div>
       <div class="toolbar">
-        <nav class="tabs" aria-label="Tabs" role="tablist">
-          <a class="tab" role="tab" aria-controls="panelFrame" href="#home" data-tab="home" aria-selected="true">Home</a>
-          <a class="tab" role="tab" aria-controls="panelFrame" href="#store" data-tab="store">Store</a>
-          <a class="tab" role="tab" aria-controls="panelFrame" href="#vstoc" data-tab="vstoc">VSTOC</a>
-          <a class="tab" role="tab" aria-controls="panelFrame" href="#network" data-tab="network">Network</a>
-          <a class="tab" role="tab" aria-controls="panelFrame" href="#system" data-tab="system">System</a>
-          <a class="tab" role="tab" aria-controls="panelFrame" href="#about" data-tab="about">About</a>
-        </nav>
+        <nav class="tabs" role="tablist" aria-label="Main Tabs">
+  <a class="tab" role="tab" aria-controls="panelFrame" href="#home" data-tab="home" aria-selected="true">Home</a>
+  <a class="tab" role="tab" aria-controls="panelFrame" href="#store" data-tab="store">Store</a>
+  <a class="tab" role="tab" aria-controls="panelFrame" href="#network" data-tab="network">Network</a>
+  <a class="tab" role="tab" aria-controls="panelFrame" href="#system" data-tab="system">System</a>
+  <a class="tab" role="tab" aria-controls="panelFrame" href="#about" data-tab="about">About</a>
+  <a class="tab" role="tab" aria-controls="panelFrame" href="#contact" data-tab="contact">Contact</a>
+  <a class="tab" role="tab" aria-controls="panelFrame" href="#terms" data-tab="terms">Terms</a>
+  <a class="tab" role="tab" aria-controls="panelFrame" href="#privacy" data-tab="privacy">Privacy</a>
+</nav>
         <button id="themeToggle" class="theme-toggle" title="Toggle theme">🌗</button>
       </div>
     </header>
