--- a/pages/network.html
+++ b/pages/network.html
@@ -21,9 +21,9 @@
 
   <script>
     const ROUTES = {
-      "NET-HCM": "pages/net/net-hcm.html",
-      "NET-HN" : "pages/net/net-hn.html",
-      "NET-NT" : "pages/net/net-nt.html"
+      "NET-HCM": "./net/net-hcm.html",
+      "NET-HN" : "./net/net-hn.html",
+      "NET-NT" : "./net/net-nt.html"
     };
 
     const sel = document.getElementById("netSelect");
