--- a/pages/net/net-hn.html
+++ b/pages/net/net-hn.html
@@ -5,7 +5,7 @@
     <section class="card">
       <h1>NET-HN</h1>
       <p>Trang này đang được cập nhật. Vui lòng quay lại sau.</p>
-      <p><a href="../../index.html#network" class="btn">← Quay về Network</a></p>
+      <p><a href="../network.html" class="btn">← Quay về Network</a></p>
     </section>
   </div>
 </div>
