--- a/pages/store.html
+++ b/pages/store.html
@@ -46,14 +46,22 @@
 		<a class="btn secondary" href="https://www.wireguard.com/" target="_blank" rel="noopener">Mở web</a>
       </div>
     </article>
-    <article class="card" data-tags="terminal android termux ssh">
-     <h3>xxx</h3>
+    <article class="card" data-tags="rufus">
+      <h3>Rufus</h3>
       <p> </p>
       <div class="row">
-    
+        <a class="btn" href="https://rufus.ie/vi/#download" target="_blank" rel="noopener">Tải về</a>
+		<a class="btn secondary" href="https://rufus.ie/vi/" target="_blank" rel="noopener">Mở web</a>
       </div>
     </article>
-    
+     <article class="card" data-tags="window10">
+      <h3>Window 10</h3>
+      <p> </p>
+      <div class="row">
+        <a class="btn" href="https://www.microsoft.com/en-us/software-download/windows10" target="_blank" rel="noopener">Tải về</a>
+		<a class="btn secondary" href="https://www.microsoft.com/en-us/software-download/" target="_blank" rel="noopener">Mở web</a>
+      </div>
+    </article>
   </div>
 </div>
 <script>
