--- a/pages/store.html
+++ b/pages/store.html
@@ -70,6 +70,15 @@
 		<a class="btn secondary" href="https://www.win-rar.com/" target="_blank" rel="noopener">Mở web</a>
       </div>
     </article>
+	 </article>
+	   <article class="card" data-tags="Zoom">
+      <h3>Zoom</h3>
+      <p> </p>
+      <div class="row">
+        <a class="btn" href="https://zoom.us/support/download" target="_blank" rel="noopener">Tải về</a>
+		<a class="btn secondary" href="https://zoom.us/" target="_blank" rel="noopener">Mở web</a>
+      </div>
+    </article>
   </div>
 </div>
 <script>
